# prompt-opt

./: .env.example  .gitignore  README.md  pyproject.toml
configs/_base_/: default.yaml
configs/t2i/: default.yaml
promptopt/: __init__.py  cases.py  config.py  design_requirement.py  report.py  report_trace.py  runtime_config.py  synthesize.py  templates.py  trajectory.py  types.py
promptopt/clients/: __init__.py  aesthetic_bridge.py  api_core_bridge.py
promptopt/datasets/: __init__.py  base.py
promptopt/engine/: __init__.py  runner.py  trainer.py
promptopt/envs/: __init__.py  base.py  registry.py
promptopt/evaluation/: __init__.py
promptopt/gradient/: __init__.py  aggregate.py  reflect.py
promptopt/llm_templates/: __init__.py  analyst_error.md  analyst_error_full_rewrite.md  analyst_error_rewrite.md  analyst_success.md  analyst_success_full_rewrite.md  analyst_success_rewrite.md  lr_autonomous.md  merge_failure.md  merge_failure_full_rewrite.md  merge_failure_rewrite.md  merge_final.md  merge_final_full_rewrite.md  merge_final_rewrite.md  merge_success.md  merge_success_full_rewrite.md  merge_success_rewrite.md  meta_prompt.md  ranking.md  ranking_rewrite.md  slow_update.md  (+1 more)
promptopt_webui/: __init__.py  __main__.py  app.py
scripts/: __init__.py  _run_one_round.py  backup.py  build_aesthetic_preview_html.py  build_pipeline_trace_html.py  eval_only.py  refresh_dashboard.py  run_batch_t2i.py  run_overnight.py  run_overnight_guard.py  run_t2i.py  train.py
skillopt/: __init__.py  config.py  types.py
skillopt_webui/: __init__.py  __main__.py  app.py
(+83 files in other folders)
