[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptopt"
version = "0.2.0"
description = "prompt-opt: T2I prompt optimization via Reflect + Gate + aesthetic-core"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "prompt-opt Team"},
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "byted-donyan-api-core>=0.1.23,<0.2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[project.scripts]
promptopt-run-t2i = "scripts.run_t2i:main"

[tool.setuptools.packages.find]
include = ["promptopt*", "scripts*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
